# envhub

./: .envrc  .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  bun.lockb  install.sh  package.json  vite.config.js
.github/workflows/: release.yml
crates/envhub-core/: Cargo.toml
crates/envhub-core/src/: apps.rs  error.rs  install.rs  lib.rs  state.rs
crates/envhub-launcher/: Cargo.toml
crates/envhub-launcher/examples/: check_config.rs
crates/envhub-launcher/src/: main.rs
crates/envhub-tui/: Cargo.toml
crates/envhub-tui/src/: app.rs  main.rs  ui.rs
docs/: core-launcher.md  design.md
scripts/: bump-version.sh
src/: app.css  app.html
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/resources/: README.txt  envhub-launcher
src-tauri/src/: lib.rs  main.rs
src/routes/: +page.svelte
