[workspace]
members = [
    "src-tauri",
    "crates/*",
]
resolver = "2"

[workspace.package]
version = "v0.1.3"
edition = "2024"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
dirs = "5.0"
indexmap = { version = "2.2", features = ["serde"] }
tempfile = "3.10"

envhub-core = { path = "./crates/envhub-core" }

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
