[package]
name = "envhub-core"
version.workspace = true
edition.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
dirs.workspace = true
indexmap.workspace = true
which = "6.0"

[dev-dependencies]
tempfile.workspace = true
